@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-02T01:05:31Z",
+  "timestamp" : "2022-06-02T08:25:27Z",
   "count_outdated" : 310,
   "uniques_outdated" : 161,
-  "count" : 336,
-  "uniques" : 180,
+  "count" : 337,
+  "uniques" : 181,
   "clones" : [
     {
       "timestamp": "2022-05-19T00:00:00Z",
@@ -49,6 +49,13 @@
     },
     {
       "timestamp": "2022-06-01T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-02T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
