@@ -1,5 +1,5 @@
 {
-  "count": 26,
+  "count": 27,
   "uniques": 12,
   "clones": [
     {
@@ -34,6 +34,11 @@
     },
     {
       "timestamp": "2022-06-01T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-02T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
